MDEV-33978 P_S.THREADS is not showing all server threads

This patch only makes sure Linux getevents thread is shown in PS